<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_medium"
    android:layout_marginTop="@dimen/margin_small"
    android:layout_marginRight="@dimen/margin_medium"
    android:layout_marginBottom="@dimen/margin_small"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/margin_small"
    app:cardElevation="3dip"
    tools:ignore="MissingPrefix">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/item_match_main_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_medium">

            <TextView
                android:id="@+id/item_match_info_date"
                fontPath="@string/typeface_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_date"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/item_match_info_time"
                fontPath="@string/typeface_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_time"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_match_info_date" />

            <TextView
                android:id="@+id/item_match_label_versus"
                fontPath="@string/typeface_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_big"
                android:text="@string/label_versus"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_size_normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_match_info_time" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/margin_big"
                android:layout_marginRight="@dimen/margin_medium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/item_match_label_versus"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_match_info_time">

                <TextView
                    android:id="@+id/item_match_home_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/sample_home_score"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/text_size_normal" />

                <TextView
                    android:id="@+id/item_match_home_team_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/item_match_home_score"
                    android:gravity="center"
                    android:text="@string/sample_home_team"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/text_size_normal" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_big"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/item_match_label_versus"
                app:layout_constraintTop_toBottomOf="@id/item_match_info_time">

                <TextView
                    android:id="@+id/item_match_away_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_away_score"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/text_size_normal" />

                <TextView
                    android:id="@+id/item_match_away_team_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/item_match_away_score"
                    android:gravity="center"
                    android:text="@string/sample_away_team"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/text_size_normal" />
            </RelativeLayout>
        </android.support.constraint.ConstraintLayout>

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/item_match_action_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_notification" />

        <View
            android:id="@+id/item_match_main_action"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/text_size_normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/item_match_action_schedule"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>