<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:ignore="MissingPrefix">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:minHeight="?actionBarSize"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/detail_player_collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:titleEnabled="false">

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/detail_player_info_header"
                    android:layout_width="match_parent"
                    android:layout_marginTop="?actionBarSize"
                    android:layout_height="@dimen/height_img_header">


                    <ImageView
                        android:id="@+id/detail_player_img_fanart"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:scaleType="centerCrop"/>
                </android.support.constraint.ConstraintLayout>


                <android.support.v7.widget.Toolbar
                    android:id="@+id/detail_player_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />
            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/detail_player_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:padding="@dimen/margin_normal"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <LinearLayout
                    android:id="@+id/detail_player_height_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/detail_player_label_weight"
                            android:layout_width="match_parent"
                            fontPath="@string/typeface_bold"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/label_weight"
                            android:textSize="@dimen/text_size_normal" />

                        <TextView
                            android:id="@+id/detail_player_info_weight"
                            android:layout_width="match_parent"
                            fontPath="@string/typeface_italic"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_margin="@dimen/margin_normal"
                            android:text="@string/sample_weight"
                            android:textSize="@dimen/text_size_big" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/detail_player_label_height"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            fontPath="@string/typeface_bold"
                            android:gravity="center"
                            android:text="@string/label_height"
                            android:textSize="@dimen/text_size_normal" />

                        <TextView
                            android:id="@+id/detail_player_info_height"
                            android:layout_width="match_parent"
                            fontPath="@string/typeface_italic"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_margin="@dimen/margin_normal"
                            android:text="@string/sample_height"
                            android:textSize="@dimen/text_size_big" />
                    </LinearLayout>
                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    app:layout_constraintBottom_toBottomOf="@id/detail_player_info_position"
                    app:layout_constraintTop_toTopOf="@id/detail_player_info_position"
                    android:background="@color/colorAccent"
                    android:layout_height="@dimen/separator_height_bottom"/>

                <TextView
                    android:paddingLeft="@dimen/margin_normal"
                    android:paddingRight="@dimen/margin_normal"
                    android:id="@+id/detail_player_info_position"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_player_position"
                    android:background="@color/white"
                    fontPath="@string/typeface_bold"
                    android:textSize="@dimen/text_size_big"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/detail_player_height_weight" />

                <TextView
                    android:layout_marginTop="@dimen/margin_normal"
                    android:padding="@dimen/margin_medium"
                    android:id="@+id/detail_player_info_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_medium"
                    android:text="@string/sample_player_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/detail_player_info_position"/>
            </android.support.constraint.ConstraintLayout>

        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>
</android.support.constraint.ConstraintLayout>